@@ -3,7 +3,7 @@
     ,"lowCaseName": "collections"
     ,"description": "Hides resources under this container in tree. Adding grid int o the update resource panel."
     ,"author": "John Peca"
-    ,"version": "3.1.0"
+    ,"version": "3.1.1"
     ,"package":{
         "actions": [{
             "id": 1
@@ -50,7 +50,6 @@
         },{
             "key": "renderer_image_path"
             ,"value": ""
-            ,"namespace": ""
         }]
     }
     ,"database":{
@@ -60,7 +59,7 @@
     ,"build": {
         "resolver": {
             "before": ["resolve.switchback.php"]
-            ,"after": ["resolve.updatefromfirst.php", "resolve.defaulttemplate.php", "resolve.fixselections.php"]
+            ,"after": ["resolve.updatefromfirst.php", "resolve.defaulttemplate.php", "resolve.fixselections.php", "resolve.fixsystemsettings.php"]
         }
     }
 }
